# hahomematic

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  changelog.md  changelog.txt  check_device_description.py  check_entity_definition.py  codecov.yml  cov_hahomematic.sh  example.py  example_local.py  example_mjk.py  example_multi.py  mypy.ini  pylintrc  pyproject.toml  requirements.txt  requirements_test.txt  requirements_test_pre_commit.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: codeql.yml  lock.yml  pylint.yml  python-publish.yml  test-run.yaml  test.yaml
docs/: input_select_helper.md  rssi_fix.md  unignore.md
hahm/: unignore
hahomematic/: __init__.py  action_event.py  async_support.py  backport.py  central_unit.py  client.py  config.py  const.py  context.py  converter.py  data.py  decorators.py  device.py  entity.py  entity_support.py  event.py  exceptions.py  exporter.py  helpers.py  hmcli.py  hub.py  json_rpc.py  json_rpc_client.py  parameter_visibility.py  performance.py  platforms.py  proxy.py  server.py  support.py  validator.py  xml_rpc_proxy.py  xml_rpc_server.py
hahomematic/caches/: __init__.py  dynamic.py  persistent.py  visibility.py
hahomematic/central/: __init__.py  command_queue.py  decorators.py  xml_rpc_server.py
hahomematic/client/: __init__.py  json_rpc.py  xml_rpc.py
hahomematic/custom_platforms/: __init__.py  climate.py  cover.py  entity.py  entity_definition.py  light.py  lock.py  siren.py  switch.py
hahomematic/devices/: __init__.py  climate.py  cover.py  device_description.py  entity_definition.py  light.py  lock.py  siren.py  switch.py
hahomematic/generic_platforms/: __init__.py  action.py  binary_sensor.py  button.py  entity.py  number.py  select.py  sensor.py  switch.py  text.py
hahomematic/hub_platforms/: __init__.py  binary_sensor.py  button.py  entity.py  number.py  select.py  sensor.py  switch.py  text.py
hahomematic/internal/: __init__.py  action.py  text.py
hahomematic/rega_scripts/: datapoints.fn  fetch_all_device_data.fn  get_all_system_variables.fn  get_serial.fn  get_system_variables_ext_marker.fn  set_system_variable.fn
hahomematic_support/: __init__.py  client_local.py  ruff.toml
script/: run-in-env.sh
tests/: conftest.py  const.py  helper.py  ruff.toml  test_action.py  test_binary_sensor.py  test_button.py  test_central.py  test_central_pydevccu.py  test_climate.py  test_cover.py  test_decorator.py  test_device.py  test_entity.py  test_event.py  test_helpers.py  test_json_rpc.py  test_light.py  test_lock.py  test_number.py  test_select.py  test_sensor.py  test_siren.py  test_support.py  test_switch.py  test_text.py
