[metadata]
name         = hahomematic
version      = 2023.1.1
author       = Daniel Perna
author_email = danielperna84@gmail.com
license      = MIT License
platforms    = any
description  = Homematic interface for Home Assistant running on Python 3.
long_description = file: README.md
long_description_content_type = text/markdown
keywords     = home, assistant, homematic
url = https://github.com/danielperna84/hahomematic
project_urls =
    Source Code = https://github.com/danielperna84/hahomematic
    Bug Reports = https://github.com/danielperna84/hahomematic/issues
    Docs: Dev   = https://github.com/danielperna84/hahomematic
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Home Automation

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9.0
install_requires =
    aiohttp>=3.8.1
    voluptuous>=0.13.1
    python-slugify>=4.0.1

[options.packages.find]
include =
    hahomematic*
exclude =
    tests, tests.*, dist, build

[options.package_data]
hahomematic = py.typed, rega_scripts/*.fn

[options.entry_points]
console_scripts =
    hahomematic = hahomematic.hmcli:main

[bdist_wheel]
universal = true

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# W503: Line break occurred before a binary operator
ignore = W503
max-line-length = 88
noqa-require-code = True
